alinhando o elemento do canto direito

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Tag <body> é o corpo do documento, onde tem as informações que serão mostradas. -->
   <body>
-    <img
+    <img id="main"
       src="images/img1.jpg"
       alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
     />
